# for-test

./: db.sqlite3  manage.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_profile_img.py  0003_alter_user_card_id_img_and_more.py
connect/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
connect/migrations/: 0001_initial.py  0002_offer.py  0002_offer_status_alter_offer_title.py  0003_comment.py  0003_remove_offer_owner_id_offer_owner_id.py  0004_rename_body_comment_comment.py  0005_activity.py
coonect_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
